--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "김민준"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "**세상을 바꿀 남자입니다**"
-  location         : "Somewhere"
+  location         : "Gwanggyo, KOREA"
   email            :
   links:
     - label: "Email"
